--- a/app/src/main/res/layout/book_details_fragment.xml
+++ b/app/src/main/res/layout/book_details_fragment.xml
@@ -145,7 +145,7 @@
             android:textStyle="bold|italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_description" />
+            app:layout_constraintTop_toBottomOf="@+id/start_read_book" />
 
         <ImageView
             android:id="@+id/imageView_book_reading_activity_graph"
@@ -181,5 +181,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_book_details_activity_log_title" />
+
+        <Button
+            android:id="@+id/start_read_book"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start_read_book_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_book_details_description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
