--- a/app/src/main/res/layout/create_new_book_fragment.xml
+++ b/app/src/main/res/layout/create_new_book_fragment.xml
@@ -1,13 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.books.createbook.CreateNewBookFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Фрагмент формы создания новой записи о книге" />
+    <ImageView
+        android:id="@+id/iv_new_book_cover"
+        android:layout_width="234dp"
+        android:layout_height="360dp"
+        android:layout_margin="8dp"
+        android:contentDescription="@string/iv_new_book_cover_contentDescription_text"
+        android:src="@drawable/book_plug"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="8dp" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_start_camera"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:text="@string/btn_start_camera_text"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_new_book_cover"
+        app:layout_constraintTop_toTopOf="@+id/iv_new_book_cover" />
+
+    <Button
+        android:id="@+id/btn_start_media"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:text="@string/btn_start_media_text"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_new_book_cover"
+        app:layout_constraintTop_toBottomOf="@id/btn_start_camera" />
+
+    <Button
+        android:id="@+id/btn_crop_image"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:text="@string/btn_crop_image_text"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_new_book_cover"
+        app:layout_constraintTop_toBottomOf="@id/btn_start_media" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_new_book_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/til_new_book_title_hint"
+        app:counterEnabled="true"
+        app:counterMaxLength="128"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/black"
+        app:errorEnabled="true"
+        app:helperText="Не более 128 символов"
+        app:helperTextEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_new_book_cover">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/new_book_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:inputType="textShortMessage" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_new_book_author"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/til_new_book_author_hint"
+        app:counterEnabled="true"
+        app:counterMaxLength="128"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/black"
+        app:errorEnabled="true"
+        app:helperText="Не более 128 символов"
+        app:helperTextEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/til_new_book_title">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/new_book_author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeActionId="@+id/til_new_book_number_of_pages"
+            android:inputType="textShortMessage"
+            tools:ignore="InvalidImeActionId" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_new_book_number_of_pages"
+        android:layout_width="96dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/til_new_book_number_of_pages_hint"
+        app:counterEnabled="true"
+        app:counterMaxLength="4"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/til_new_book_author"
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/new_book_number_of_pages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="number"
+            tools:ignore="InvalidImeActionId" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_new_book_number_of_words_per_page"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/til_new_book_number_of_words_per_page_hint"
+        app:counterEnabled="true"
+        app:counterMaxLength="4"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        app:layout_constraintEnd_toStartOf="@+id/til_new_book_total_words"
+        app:layout_constraintStart_toEndOf="@+id/til_new_book_number_of_pages"
+        app:layout_constraintTop_toBottomOf="@+id/til_new_book_author"
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/new_book_number_of_words_per_page"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="number" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_new_book_total_words"
+        android:layout_width="112dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/til_new_book_total_words_hint"
+        app:counterEnabled="true"
+        app:counterMaxLength="9"
+        app:errorEnabled="true"
+        app:helperTextEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/til_new_book_author"
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/new_book_total_words"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_save_new_book_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/til_new_book_total_words"
+        app:layout_constraintStart_toStartOf="@+id/til_new_book_number_of_pages"
+        app:layout_constraintTop_toBottomOf="@+id/til_new_book_number_of_words_per_page" />
+</androidx.constraintlayout.widget.ConstraintLayout>
