ProcessReadingBookFragment and StopwatchService improvements (task89)

--- a/app/src/main/res/layout/dialog_enter_bookmark.xml
+++ b/app/src/main/res/layout/dialog_enter_bookmark.xml
@@ -23,4 +23,11 @@
         android:layout_height="wrap_content"
         android:text="@string/dialog_process_reading_button_enter_bookmark" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_back_to_reading"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dialog_process_reading_button_back_to_reading" />
+
 </LinearLayout>
