Изм 1.13 Complex redesign UI - Полная переделка UI перевод на работу с нижним менб и акцент на работу с 1 кнопкой (90% операций должны будут выполняться нажатием на одну и туже кнопку без проблем с пониманием функционала)  - реализовано подключение нижней навигации  - создано некоторое количество (пока не все) анимированных и статических изображений  - создано меню тестовое  - реализова переход из главного фрагмента во фрагмент детализации информации о книге.  - реализован переход из детализации на фрагмент контроля чтения.

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -211,6 +211,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#D7DDFB"
+        android:clipToPadding="false"
+        android:paddingBottom="88dp"
+        android:paddingTop="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
