Изм 1.14.1 Complex redesign UI - Полная переделка UI перевод на работу с нижним менб и акцент на работу с 1 кнопкой (90% операций должны будут выполняться нажатием на одну и туже кнопку без проблем с пониманием функционала)  - передалан вызов метода и тотображение общего списка книг  - создан и обкатан новый главный фрагмент (без представления юзера)

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -106,4 +106,8 @@
             android:id="@+id/action_processReadingBookFragment_to_eventsFragment"
             app:destination="@id/nav_events_list_fragment" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_new_main_fragment"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.main.NewMainFragment"
+        android:label="NewMainFragment" />
 </navigation>
