Изм 1.14.2 Complex redesign UI - Полная переделка UI перевод на работу с нижним менб и акцент на работу с 1 кнопкой (90% операций должны будут выполняться нажатием на одну и туже кнопку без проблем с пониманием функционала)  -Изменена цветовая палитра

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="elem_activity_graph_background_tint">#EC5252</color>
     <color name="cod_gray_66">#66090909</color>
     <color name="black_40">#66000000</color>
+<!--   custom them -->
+    <color name="color_primary">#344955</color>
+    <color name="color_primary_dark">#232F34</color>
+    <color name="color_accent">#F8AA34</color>
+    <color name="window_background">#EEF0F2</color>
+    <color name="email_thread_background">#FEFEFE</color>
 </resources>
