Изм 1.14.5 Complex redesign UI - небольшое исправление для стабильности сборки (откатил версию graddle)

--- a/app/src/main/res/layout/process_reading_book_fragment.xml
+++ b/app/src/main/res/layout/process_reading_book_fragment.xml
@@ -155,6 +155,7 @@
         android:id="@+id/buttons_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
