--- a/app/src/main/res/layout/new_event_list_item.xml
+++ b/app/src/main/res/layout/new_event_list_item.xml
@@ -42,7 +42,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:maxLines="1"
-                android:text=""
+                android:text="2022 / 10 / 01 - прочитано 8 стр."
                 android:textAppearance="?attr/textAppearanceBody2"
                 app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
                 app:layout_constraintTop_toTopOf="parent"
@@ -56,7 +56,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:maxLines="1"
-                android:text=""
+                android:text="Наименование книги"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
                 app:layout_constraintTop_toBottomOf="@+id/sender_text_view"
@@ -71,7 +71,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:maxLines="2"
-                android:text=""
+                android:text="Автор Имя Отчество:  + описание книги, небольшое сколько прочиено, сколько осталось"
                 android:textAppearance="?attr/textAppearanceBody1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
