--- a/app/src/main/res/layout/new_event_list_item.xml
+++ b/app/src/main/res/layout/new_event_list_item.xml
@@ -38,12 +38,13 @@
                 android:id="@+id/sender_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/roboto_thin"
                 android:maxLines="1"
                 android:text="2022 / 10 / 01 - прочитано 8 стр."
                 android:textAppearance="?attr/textAppearanceBody2"
+                android:textSize="10sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="2022 / 10 / 01 - прочитано 8 стр." />
@@ -52,12 +53,13 @@
                 android:id="@+id/subject_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
                 android:maxLines="1"
                 android:text="Наименование книги"
                 android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
                 app:layout_constraintTop_toBottomOf="@+id/sender_text_view"
                 app:layout_goneMarginEnd="16dp"
@@ -67,12 +69,13 @@
                 android:id="@+id/body_preview_text_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:maxLines="2"
                 android:text="Автор Имя Отчество:  + описание книги, небольшое сколько прочиено, сколько осталось"
                 android:textAppearance="?attr/textAppearanceBody1"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
                 app:layout_constraintTop_toBottomOf="@+id/subject_text_view"
