Изм 1.16 Complex redesign UI - в главном RV реализованы разные типы представления (разметки) элементов. - реализован интерфейс (толкто для объединения разных классов в подборке -реализована разметка - внесены соответствующие изменения в реализацию адаптера и VH/

--- a/app/src/main/res/layout/new_event_list_item.xml
+++ b/app/src/main/res/layout/new_event_list_item.xml
@@ -55,11 +55,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="Наименование книги"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/body_preview_text_view"
                 app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
                 app:layout_constraintTop_toBottomOf="@+id/sender_text_view"
                 app:layout_goneMarginEnd="16dp"
