--- a/app/src/main/res/layout/new_event_list_item.xml
+++ b/app/src/main/res/layout/new_event_list_item.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView_book_cover"
+                android:id="@+id/iv_book_cover"
                 android:layout_width="80dp"
                 android:layout_height="120dp"
                 android:contentDescription="@string/ImageView_contentDescription_book_cover"
@@ -35,51 +35,51 @@
                 app:srcCompat="@drawable/book_plug" />
 
             <TextView
-                android:id="@+id/sender_text_view"
+                android:id="@+id/tv_book_item_title_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/roboto_thin"
                 android:maxLines="1"
-                android:text="2022 / 10 / 01 - прочитано 8 стр."
+                android:text="@string/tv_book_item_title_header_default_text"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:textSize="10sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
+                app:layout_constraintStart_toEndOf="@+id/iv_book_cover"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="2022 / 10 / 01 - прочитано 8 стр." />
 
             <TextView
-                android:id="@+id/subject_text_view"
+                android:id="@+id/tv_book_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:maxLines="2"
-                android:text="Наименование книги"
+                android:text="@string/tv_bool_name_default_text"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/body_preview_text_view"
-                app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
-                app:layout_constraintTop_toBottomOf="@+id/sender_text_view"
+                app:layout_constraintEnd_toEndOf="@+id/tv_body_book_description"
+                app:layout_constraintStart_toEndOf="@+id/iv_book_cover"
+                app:layout_constraintTop_toBottomOf="@+id/tv_book_item_title_header"
                 app:layout_goneMarginEnd="16dp"
                 tools:text="Наименование книги" />
 
             <TextView
-                android:id="@+id/body_preview_text_view"
+                android:id="@+id/tv_body_book_description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:maxLines="2"
-                android:text="Автор Имя Отчество:  + описание книги, небольшое сколько прочиено, сколько осталось"
+                android:text="@string/tv_body_book_description_default_text"
                 android:textAppearance="?attr/textAppearanceBody1"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView_book_cover"
-                app:layout_constraintTop_toBottomOf="@+id/subject_text_view"
+                app:layout_constraintStart_toEndOf="@+id/iv_book_cover"
+                app:layout_constraintTop_toBottomOf="@+id/tv_book_name"
                 tools:text="Автор Имя Отчество:  + описание книги, небольшое сколько прочиено, сколько осталось" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
