improvements of ProcessReadingBookFragment 1) Исправлена логика обработки нажатия кнопки возврата к чтению: при закрытии диалога по этой кнорке таймеры возобновляют отсчет времени в том же режиме, в котором был вызван этот диалог 2) Корректная обработка кнопки "остановить чтение", если чтение еще не началось (возврат на предыдущий фрагмент) 3) Стабилизировано отображение таймеров 4) Добавлен фильтр на поле ввода номера текущей страницы. Теперь туда можно вводить только цифры 5) Автоматическое открытие и закрытие клавиатуры на диалоге ввода номера текущей страницы 6) Добавлен альтернативный способ ввода номера страницы - SeekBar (ползунок) 7) Рукоятка ползунка меняет свой цвет в зависимости от указанного номера страницы 8) При изменении значения ползунком - над ним отображается поле с выбранным номером страницы, которое перемещается вместе с ползунком (реализован кастомный SeekBar)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="color_accent">#F8AA34</color>
     <color name="window_background">#EEF0F2</color>
     <color name="email_thread_background">#FEFEFE</color>
+    <color name="red">#EA0505</color>
+    <color name="green">#027763</color>
 </resources>
