--- a/app/src/main/res/layout/dialog_enter_bookmark.xml
+++ b/app/src/main/res/layout/dialog_enter_bookmark.xml
@@ -17,6 +17,11 @@
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <ru.vdv.myapp.myreadersdiary.ui.views.ThumbTextSeekBar
+        android:id="@+id/dialog_seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_enter_bookmark"
         android:layout_width="match_parent"
