--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="elem_activity_graph_width">13dp</dimen>
     <dimen name="elem_activity_graph_height">13dp</dimen>
     <dimen name="elem_activity_graph_margin">2dp</dimen>
+    <dimen name="summary_statistic_graph_base_textSize">9sp</dimen>
 </resources>
