--- a/app/src/main/res/layout/item_list_event_of_book.xml
+++ b/app/src/main/res/layout/item_list_event_of_book.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView_event_icon"
+            android:id="@+id/iv_event_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:contentDescription="@string/ImageView_contentDescription_book_cover"
@@ -25,7 +25,7 @@
             app:srcCompat="@drawable/ic_baseline_save_alt_24" />
 
         <TextView
-            android:id="@+id/textView_event_title"
+            android:id="@+id/tv_event_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -36,20 +36,20 @@
             android:textSize="14sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imageView_event_icon"
+            app:layout_constraintStart_toEndOf="@id/iv_event_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView_fix_data_event"
+            android:id="@+id/tv_fix_data_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:text="@string/textView_fix_data_event_plug"
-            app:layout_constraintStart_toEndOf="@id/imageView_event_icon"
-            app:layout_constraintTop_toBottomOf="@id/textView_event_title" />
+            app:layout_constraintStart_toEndOf="@id/iv_event_icon"
+            app:layout_constraintTop_toBottomOf="@id/tv_event_title" />
 
         <ImageView
-            android:id="@+id/imageView_event_add_book"
+            android:id="@+id/iv_event_add_book"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_margin="16dp"
