Изм 1.19.1 Complex redesign UI (create Users fragments) - продолжена работа над фрагментом авторизации, выполнена разметка, добавлен фон, навигационные кнопки. - добавлена разметка, фрагмент и вьюмодель для экрана поиска пользователей - добавлена разметка, фрагмент и вьюмодель для экрана восстановления доступа - внесены изменения в навигационный граф - добавлена иконка строки поиска (пока в простом виде, потом нужно фирменную замутить) - реализована базовая логика фрагмента логинизации

--- a/app/src/main/res/layout/fragment_user_restoring_access.xml
+++ b/app/src/main/res/layout/fragment_user_restoring_access.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/fragment_horizontal_margin"
     android:paddingBottom="@dimen/fragment_vertical_margin"
     android:background="@drawable/ic_bg_login_white"
-    tools:context=".ui.users.login.UserLoginFragment">
+    tools:context=".ui.users.recovery.RestoringUserAccessFragment">
 
     <EditText
         android:id="@+id/username"
@@ -27,23 +27,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:hint="@string/prompt_password"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
+        android:hint="@string/prompt_email"
+        android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_restoring_user_access"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
@@ -56,28 +54,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintTop_toBottomOf="@+id/email"
         app:layout_constraintVertical_bias="0.2" />
-
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:enabled="true"
-        android:text="@string/action_sign_up"
-        app:layout_constraintEnd_toEndOf="@+id/btn_login"
-        app:layout_constraintStart_toStartOf="@+id/btn_login"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
-
-    <Button
-        android:id="@+id/btn_restore_access"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:enabled="true"
-        android:text="@string/action_forgot_my_password"
-        app:layout_constraintEnd_toEndOf="@+id/btn_login"
-        app:layout_constraintStart_toStartOf="@+id/btn_login"
-        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
 </androidx.constraintlayout.widget.ConstraintLayout>
