--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -108,10 +108,21 @@
     <fragment
         android:id="@+id/nav_user_registration_fragment"
         android:name="ru.vdv.myapp.myreadersdiary.ui.users.registration.UserRegistrationFragment"
-        android:label="Регистрация нового пользователя" />
+        android:label="@string/nav_user_registration_fragment_label"
+        tools:layout="@layout/fragment_user_registration"/>
     <fragment
         android:id="@+id/nav_users_list_fragment"
-        android:name="ru.vdv.myapp.myreadersdiary.ui.users.UsersFragment"
-        android:label="Список пользователей"
-        tools:layout="@layout/fragment_users" />
+        android:name="ru.vdv.myapp.myreadersdiary.ui.users.RelatedUsersFragment"
+        android:label="@string/nav_users_list_fragment_label"
+        tools:layout="@layout/fragment_users_related" />
+    <fragment
+        android:id="@+id/nav_search_users_fragment"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.users.search.SearchUsersFragment"
+        android:label="@string/nav_search_users_fragment_label"
+        tools:layout="@layout/fragment_user_search"/>
+    <fragment
+        android:id="@+id/nav_restoring_user_access_fragment"
+        android:name="ru.vdv.myapp.myreadersdiary.ui.users.recovery.RestoringUserAccessFragment"
+        android:label="@string/nav_restoring_user_access_fragment_label"
+        tools:layout="@layout/fragment_user_restoring_access" />
 </navigation>
